--- a/css/index.scss
+++ b/css/index.scss
@@ -11,16 +11,6 @@ body {
 	font-family: $primary-font;
 }
 
-button {
-	transition: opacity 0.2s;
-	transition: border-color 0.2s;
-}
-
-button:hover {
-	opacity: 0.7;
-	transition: opacity 0.2s;
-}
-
 .container {
 	margin-top: 15%;
 	margin-bottom: 2rem;
@@ -30,19 +20,12 @@ button:hover {
 	margin-bottom: 5rem;
 }
 
-a:hover {
-	opacity: 0.7;
-}
-
 .config {
-	border-color: #000000;
-	color: #000000;
-	transition: opacity 0.2s;
+	display: inline-block;
 }
 
-.config:hover {
-	opacity: 0.7;
-	transition: opacity 0.2s;
+#config {
+	border-color: #000000 !important;
 	color: #000000;
 }
 
@@ -72,6 +55,10 @@ a:hover {
 
 .hidden {
 	display: none;
+}
+
+.invisible {
+	visibility: hidden;
 }
 
 .info {
