--- a/css/index.scss
+++ b/css/index.scss
@@ -1,86 +1,93 @@
 ---
 ---
 
-$primary-font: monospace;
-$clock-font: 'Source Code Pro';
-$type-font: 'Source Code Pro';
+$primary-font: 'Roboto Mono';
+$clock-font: 'Roboto';
+$type-font: $clock-font;
+$monospace: $primary-font;
 
 body {
-	transition: color 0.2s;
-	transition: background-color 1s;
-	font-family: $primary-font;
+    font-size: 2.1rem;
+    transition: color 0.2s;
+    transition: background-color 1s;
+    font-family: $primary-font;
 }
 
-.container {
-	margin-top: 15%;
-	margin-bottom: 2rem;
-}
-
-.main {
-	margin-bottom: 5rem;
-}
-
-.config {
-	display: inline-block;
-}
-
-#cog {
-	border-color: #000000 !important;
-	color: #000000;
-}
-
-.fa {
-	font-size: 150%;
-}
-
-.status {
-	border-left: 2px solid;
-	transition: border-left-color 0.2s;
-	padding-left: 2rem;
-	margin-bottom: 3rem;
-}
-
-#clock {
-	font-family: $clock-font;
-	font-size: 8rem;
-	padding: 0;
-	margin: 0;
-}
-
-#type {
-	text-transform: uppercase;
-	font-family: $type-font;
-	font-size: 4rem;
-}
-
-#options {
-	margin-bottom: 4rem;
-	font-size: 2rem;
-	font-family: $clock-font;
-	font-weight: 400;
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 300;
 }
 
 input {
-	color: #555555;
-	font-family: monospace;
+    color: #555555;
+    font-family: $monospace;
+}
+
+.container {
+    margin-top: 15%;
+    margin-bottom: 2rem;
+}
+
+.main {
+    margin-bottom: 5rem;
+}
+
+.fa {
+    font-size: 150%;
+}
+
+.status {
+    border-left: 2px solid;
+    transition: border-left-color 0.2s;
+    padding-left: 2rem;
+    margin-bottom: 3rem;
 }
 
 .hidden {
-	display: none;
+    display: none;
 }
 
 .invisible {
-	visibility: hidden;
+    visibility: hidden;
 }
 
-.info {
-	font-size: 2rem;
+#options {
+    margin-bottom: 4rem;
+    p {
+        text-align: justify;
+        display: inline-block;
+        margin: 2rem 0;
+    }
+    input[type="number"] {
+        margin: 0;
+        width: 9rem;
+        display: inline-block;
+    }
 }
 
 #footer {
-	opacity: 0.5;
+    opacity: 0.7;
 }
 
 #submit {
-	font-family: monospace;
+    font-family: $monospace;
+}
+
+#clock {
+    font-family: $clock-font;
+    font-weight: 100;
+    font-size: 10rem;
+    padding: 0;
+    margin: 0;
+}
+
+#type {
+    text-transform: uppercase;
+    font-family: $type-font;
+    font-weight: 300;
+    font-size: 5rem;
+}
+
+#cog {
+    border-color: #616161 !important;
+    color: #616161;
 }
