--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -170,11 +170,11 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
-  padding: 0 30px;
+  height: 3.8rem;
+  padding: 0 3rem;
   /*color: #555;*/
   text-align: center;
-  font-size: 11px;
+  font-size: 1.2rem;
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
