--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -271,7 +271,7 @@ select:focus {
   /*outline: 0;*/ }
 label,
 legend {
-  display: block;
+  /*display: block;*/
   margin-bottom: .5rem;
   font-weight: 600; }
 fieldset {
