--- a/css/index.scss
+++ b/css/index.scss
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
+ul {
+    list-style-type: disc;
+}
+
 input {
     color: #555555;
     font-family: $monospace;
